# ai-advent-with-love

./: .env.example  .gitignore  README.md  agent.py  app.py  config.py  docker-compose.yml  llm_client.py  main.py  mcp_tools.py  memory.py  pyproject.toml  storage.py  task_state.py
data/: db.sqlite
services/api/: Dockerfile  mcp_config.yaml  pyproject.toml
services/api/app/: config.py  connection_manager.py  dependencies.py  main.py
services/api/app/agent/: agent.py  mcp_client.py  memory.py  strategies.py
services/api/app/db/: database.py  models.py  repositories.py
services/api/app/infrastructure/: llm.py  mcp_sse.py
services/api/app/interfaces/: llm.py  mcp.py  repositories.py
services/api/app/routers/: chat.py  mcp_servers.py  notifications.py  sessions.py  users.py
services/mcp-dadata/: Dockerfile  pyproject.toml  server.py
services/mcp-reminder/: Dockerfile  database.py  models.py  pyproject.toml  repository.py  scheduler.py  server.py
services/mcp-reminder/channels/: __init__.py  base.py  webhook.py
services/mcp-saver/: Dockerfile  pyproject.toml  server.py
services/mcp-summarize/: Dockerfile  pyproject.toml  server.py
services/mcp-time/: Dockerfile  pyproject.toml  server.py
services/mcp-weather/: Dockerfile  pyproject.toml  server.py
services/ui/: Dockerfile  api_client.py  app.py  config.yaml  data_layer.py  pyproject.toml
services/ui-react/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
services/ui-react/src/: App.tsx  index.css
services/ui-react/src/api/: client.ts  (+1 more)
(+29 files in other folders)
