[project]
name = "ai-advent-with-love"
version = "0.3.0"
description = "AI Advent With Love"
requires-python = ">=3.14"
dependencies = [
    "black==26.3.1",
    "litellm==1.82.2",
    "mcp>=1.9.4",
    "openmeteo-mcp-server",
    "python-dotenv==1.2.2",
    "ruff==0.15.6",
    "streamlit==1.55.0",
]
